[gd_scene load_steps=10 format=2]

[ext_resource path="res://SwitchResources/redSwitch2.png" type="Texture" id=1]
[ext_resource path="res://SwitchResources/Switch.gd" type="Script" id=2]
[ext_resource path="res://SwitchResources/BlueSwitch2.png" type="Texture" id=3]
[ext_resource path="res://EffectsResources/ClickBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://EffectsResources/RotationArrows.tscn" type="PackedScene" id=5]
[ext_resource path="res://SwitchResources/BlueSwitch1.png" type="Texture" id=6]
[ext_resource path="res://SwitchResources/redSwitch1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.209, 0.899685 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.09416, 12.8784 )

[node name="Switch" type="Node2D"]
script = ExtResource( 2 )

[node name="Offset" type="Node2D" parent="."]
scale = Vector2( 0.8, 0.8 )

[node name="Normal" type="Node2D" parent="Offset"]

[node name="BlueSwitchSprite" type="Sprite" parent="Offset/Normal"]
position = Vector2( -3.929, -5.341 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="RedSwitchSprite" type="Sprite" parent="Offset/Normal"]
position = Vector2( 1.492, -5.337 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Rotated" type="Node2D" parent="Offset"]
visible = false

[node name="BlueSwitchSprite" type="Sprite" parent="Offset/Rotated"]
position = Vector2( 0, -5.324 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="RedSwitchSprite" type="Sprite" parent="Offset/Rotated"]
position = Vector2( 0, -5.324 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="Hitboxes" type="Node2D" parent="Offset"]
position = Vector2( 0, -4.207 )

[node name="HitBoxBot" type="Area2D" parent="Offset/Hitboxes"]
position = Vector2( 0.0191721, -0.0164394 )
scale = Vector2( 1, 1 )

[node name="HitBoxBot" type="CollisionShape2D" parent="Offset/Hitboxes/HitBoxBot"]
position = Vector2( -0.963847, 0.537765 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="HitBoxTop" type="Area2D" parent="Offset/Hitboxes"]
position = Vector2( 0.0191721, -0.0164394 )
scale = Vector2( 1, 1 )

[node name="HitBoxTop" type="CollisionShape2D" parent="Offset/Hitboxes/HitBoxTop"]
position = Vector2( 0.31492, -0.770516 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="ClickBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.452488, -4.69458 )

[node name="ClickBox" parent="ClickBox" index="0"]
visible = false
position = Vector2( -0.118683, 1.17507 )
shape = SubResource( 2 )

[node name="selectSprite" parent="ClickBox" index="1"]
visible = false

[node name="RotationArrows" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.55, 0.55 )

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="Offset/Hitboxes/HitBoxBot" to="." method="_on_BotHitBox_area_entered"]
[connection signal="area_entered" from="Offset/Hitboxes/HitBoxTop" to="." method="_on_HitBoxTop_area_entered"]
[connection signal="input_event" from="ClickBox" to="." method="_on_ClickBox_input_event"]

[editable path="ClickBox"]
